--- a/app/src/main/res/layout/activity_listedesproduits.xml
+++ b/app/src/main/res/layout/activity_listedesproduits.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".listedesproduits"
     android:orientation="vertical">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lst">
+
+
+    </ListView>
+
 
 
 
